pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr14389.rkt
#;
(exn-pred (regexp-quote "in: (for/flvector"))
#lang typed/racket/base

(require racket/flonum)
(module+ test
  (require typed/rackunit)
  (define (from upto)
    (for/flvector ([i (in-range from upto)])
      0.0)))
